Add game listing APIs
