# src/api/player.rs
@@ -1,16 +1,19 @@
 pub use chesscom_openapi::models::{
-    chess_stats::ChessStats,
-    chess_stats_best::ChessStatsBest,
-    chess_stats_last::ChessStatsLast,
-    chess_stats_record::ChessStatsRecord,
-    chess_stats_tournament::ChessStatsTournament,
-    lessons_stats::LessonsStats,
-    player::Player,
-    player_stats::PlayerStats,
-    profile::{Profile, Status},
-    puzzle_rush_stats::PuzzleRushStats,
-    rating::Rating,
-    score::Score,
-    tactics_stats::TacticsStats,
-    title::Title,
+    ChessStats,
+    ChessStatsBest,
+    ChessStatsLast,
+    ChessStatsRecord,
+    ChessStatsTournament,
+    LessonsStats,
+    Player,
+    PlayerStats,
+    Profile,
+    profile::Status,
+    PuzzleRushStats,
+    Rating,
+    Score,
+    TacticsStats,
+    Title,
+    DailyGame,
+    ToMoveGame,
 };
